# intentlayer

./: .env.example  .env.local.example  .gitignore  AGENTS.md  BUILD_STATUS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TASK.md  llms.txt  rust-ci.yml
.github/workflows/: rust.yml
docs/: AGENT_INTEGRATION.md  DOGFOOD_CHECKLIST.md  PRIVATE_DOGFOOD.md  RELEASE_CHECKLIST.md
examples/: agent_request.json  agent_response.json
research/: intentlayer_corpus_mining_report.md  source_audit.json  transformation_rules.json  vibe_prompt_bench.draft.jsonl  vibe_prompt_generalization.jsonl
scripts/: build-release.sh  intentlayer-wrapper.sh
src/: classifier.rs  compiler.rs  env_file.rs  groq.rs  guard.rs  lib.rs  llm.rs  llm_config.rs  llm_orchestrate.rs  llm_parser.rs  llm_provider_registry.rs  main.rs  openai_compatible.rs  openrouter.rs  router.rs  rules.rs
tests/: benchmark_tests.rs  cli_tests.rs  live_smoke_tests.rs
