[package]
name = "intentlayer"
version = "0.1.0"
edition = "2021"
description = "A prompt-only compiler for coding agents"
license = "MIT"

[lib]
name = "intentlayer"
path = "src/lib.rs"

[[bin]]
name = "intentlayer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"