[package]
name = "intentlayer"
version = "0.1.0"
edition = "2021"
description = "A prompt-only compiler for coding agents"
license = "MIT"
repository = "https://github.com/prcreator1/intentlayer"
readme = "README.md"

[lib]
name = "intentlayer"
path = "src/lib.rs"

[[bin]]
name = "intentlayer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[features]
default = []
openrouter-http = ["dep:reqwest"]
groq-http = ["dep:reqwest"]